--- a/Shop.app/Shared/NavMenu.razor
+++ b/Shop.app/Shared/NavMenu.razor
@@ -20,6 +20,11 @@
             <NavLink class="nav-link" href="EmployeeOverview">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> EmployeeOverview
             </NavLink>
+            <div class="nav-item px-3">
+            <NavLink class="nav-link" href="employeeedit">
+                <span class="oi oi-plus" aria-hidden="true"></span> Edit
+            </NavLink>
+        </div>
         </div>
     </nav>
 </div>
